--- a/templates/add_quiz.html
+++ b/templates/add_quiz.html
@@ -21,14 +21,17 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-white" style="box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
             padding: 10px 20px;">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#"><b>User Dashboard</b></a>
+                <a class="navbar-brand" href="#">Admin Dashboard</a>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav me-auto">
                         <li class="nav-item">
-                            <a class="nav-link active" href="/user_scores/{{ name }}">Scores</a>
+                            <a class="nav-link active" href="/quiz_dashboard/{{name}}">Quizzes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="#">Summary</a>
+                            <a class="nav-link active" href="/admin_users/{{name}}">Users</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="/admin_summary/{{name}}">Summary</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-danger" href="/login">Logout</a>
@@ -53,6 +56,10 @@
             <div class="mb-2">
                 <label for="s_id" class="form-label">Chapter ID</label>
                 <input type="number" class="form-control form-control-sm" id="s_id" name="s_id" value="{{chapter.id}}" readonly>
+            </div>
+            <div class="mb-2">
+                <label for="quiz_name" class="form-label">Name</label>
+                <input type="text" class="form-control form-control-sm" id="quiz_name" name="quiz_name" value="{{chapter.name}}">
             </div>
             <div class="mb-2">
                 <label for="date_of_quiz" class="form-label">Date of Quiz</label>
