--- a/templates/admin_users.html
+++ b/templates/admin_users.html
@@ -5,29 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="/static/css/style.css">
-    <title>user dashboard</title>
+    <title>Admin Users</title>
+
 </head>
 <body>
     <div id="container">
         <h1 id="heading">Quiz Master</h1>
-        <!-- nav bar started here -->
-        <nav class="navbar navbar-expand-lg navbar-light bg-white" style="box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-            padding: 10px 20px;">
+<!-- nav bar strats here -->
+        <nav class="navbar navbar-expand-lg navbar-light bg-white">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">User Dashboard</a>
+                <a class="navbar-brand" href="#">Admin Dashboard</a>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav me-auto">
                         <li class="nav-item">
-                            <a class="nav-link active" href="/user_scores/{{ name }}">Scores</a>
+                            <a class="nav-link active" href="/quiz_dashboard/{{name}}">Quizzes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="/user_summary/{{name}}">Summary</a>
+                            <a class="nav-link active" href="#">Users</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="/admin_summary/{{name}}">Summary</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-danger" href="/login">Logout</a>
                         </li>
                     </ul>
-                    <form class="d-flex" method="POST" action="/search/{{name}}">
+                    <form class="d-flex" method="POST" action="/search1/{{name}}">
                         <input class="form-control me-2" type="search" placeholder="Search" name="search_txt" id="search_txt">
                         <button class="btn btn-outline-primary" type="submit">Search</button>
                     </form>
@@ -35,46 +38,46 @@
                 <span class="ms-3">Welcome, <strong>{{name}}</strong></span>
             </div>
         </nav>
-
-        <!-- nav bar ended here -->
-         <!-- user panel starts here -->
+        <!-- nav bar ends here -->
+        <!-- user panel starts here -->
         <div id="user-panel" style="margin: auto; margin-top: 30px;width: 1000px;height: auto;">
-            <h2 class="text-center text-primary mt-4">Upcoming Quizzes</h2>
-            {% if quizs %}
+            <h2 class="text-center text-primary mt-4">All Users</h2>
+            {% if users %}
             <!-- table starts here -->
             <table class="table table-striped table-hover table-bordered">
                 <thead class="table-dark text-center">
                     <tr>
                         <th>ID</th>
-                        <th>No. of Questions</th>
-                        <th>Date</th>
-                        <th>Duration</th>
-                        <th>Actions</th>
+                        <th>Email</th>
+                        <th>Password</th>
+                        <th>Fullname</th>
+                        <th>qualification</th>
+                        <th>Dob</th>
+                        <th>Action</th>
                     </tr>
                 </thead>
                 <tbody class="text-center">
-                    {% for quiz in quizs %}
-                        {% if quiz.questions | length > 0 %}
+                    {% for user in users %}
                             <tr>
-                                <td>{{ quiz.id }}</td>
-                                <td>{{ quiz.questions | length }}</td>
-                                <td>{{ quiz.date_of_quiz }}</td>
-                                <td>{{ quiz.time_duration }}</td>
+                                <td>{{ user.id }}</td>
+                                <td>{{ user.email}}</td>
+                                <td>{{ user.password }}</td>
+                                <td>{{ user.fullname }}</td>
+                                <td>{{ user.qualification }}</td>
+                                <td>{{ user.DOB }}</td>
                                 <td>
-                                    <a href="/view_quiz/{{ quiz.id }}/{{ name }}" class="btn btn-sm btn-warning">View</a>
-                                    <a href="/quiz_exam/{{ quiz.id }}/{{ name }}" class="btn btn-sm btn-success">Start</a>
+                                    <a href="/edit_user/{{user.id}}/{{name}}" class="btn btn-sm btn-primary">View</a>
                                 </td>
                             </tr>
-                        {% endif %}
                     {% endfor %}
                 </tbody>
             </table>
             <!-- table ends here -->
         {% else %}
-            <div class="text-center text-muted mt-4">No Quizzes Available</div>
+            <div class="text-center text-muted mt-4">No Users Available</div>
         {% endif %}
         </div>
-          <!-- user panel ends here -->
+        <!-- user panel ends here -->
     </div>
 </body>
 </html>
