--- a/templates/edit_quiz.html
+++ b/templates/edit_quiz.html
@@ -21,14 +21,17 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-white" style="box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
             padding: 10px 20px;">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#"><b>User Dashboard</b></a>
+                <a class="navbar-brand" href="#">Admin Dashboard</a>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav me-auto">
                         <li class="nav-item">
-                            <a class="nav-link active" href="/user_scores/{{ name }}">Scores</a>
+                            <a class="nav-link active" href="/admin/{{ name }}">Subjects</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="#">Summary</a>
+                            <a class="nav-link active" href="/admin_users/{{name}}">Users</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="/admin_summary/{{name}}">Summary</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-danger" href="/login">Logout</a>
@@ -53,6 +56,10 @@
                     <div class="mb-3">
                         <label for="quiz_id" class="form-label">Quiz ID</label>
                         <input type="number" class="form-control" id="quiz_id" name="quiz_id" value="{{quiz.id}}" readonly>
+                    </div>
+                    <div class="mb-2">
+                        <label for="quiz_name" class="form-label">Name</label>
+                        <input type="text" class="form-control form-control-sm" id="quiz_name" name="quiz_name" value="{{quiz.name}}">
                     </div>
                     <div class="mb-3">
                         <label for="date_of_quiz" class="form-label">Date of Quiz</label>
