--- a/templates/quiz_dashboard.html
+++ b/templates/quiz_dashboard.html
@@ -15,20 +15,23 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-white" style="box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
             padding: 10px 20px;">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Quiz Dashboard</a>
+                <a class="navbar-brand" href="#">Admin Dashboard</a>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav me-auto">
                         <li class="nav-item">
                             <a class="nav-link active" href="/admin/{{ name }}">Subjects</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="#">Summary</a>
+                            <a class="nav-link active" href="/admin_users/{{name}}">Users</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="/admin_summary/{{name}}">Summary</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-danger" href="/login">Logout</a>
                         </li>
                     </ul>
-                    <form class="d-flex" method="POST" action="/search/{{name}}">
+                    <form class="d-flex" method="POST" action="/search2/{{name}}">
                         <input class="form-control me-2" type="search" placeholder="Search" name="search_txt" id="search_txt">
                         <button class="btn btn-outline-primary" type="submit">Search</button>
                     </form>
@@ -47,7 +50,7 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title text-center">
-                            Quiz {{ quiz.id }} | <small class="text-primary">{{ quiz.chapter_name }}</small>
+                            Quiz {{ quiz.id }} | <small class="text-primary">{{ quiz.name }}</small>
                         </h5>
                         {% if quiz.questions %}
                         <table class="table">
