--- a/templates/quiz_details.html
+++ b/templates/quiz_details.html
@@ -21,14 +21,14 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-white" style="box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
             padding: 10px 20px;">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#"><b>Quiz details</b></a>
+                <a class="navbar-brand" href="#">User Dashboard</a>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav me-auto">
                         <li class="nav-item">
                             <a class="nav-link active" href="/user_scores/{{ name }}">Scores</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="#">Summary</a>
+                            <a class="nav-link active" href="/user_summary/{{name}}">Summary</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-danger" href="/login">Logout</a>
