final recheck remaining

--- a/templates/edit_users.html
+++ b/templates/edit_users.html
@@ -64,7 +64,7 @@
                     </div>
                     <div class="mb-3">
                         <label for="quali" class="form-label"><b>Qualification</b></label>
-                        <input type="text" class="form-control" id="quali" name="qual" value="{{user.Qualification}}" readonly>
+                        <input type="text" class="form-control" id="quali" name="qual" value="{{user.qualification}}" readonly>
                     </div>
                     <div class="mb-3">
                         <label for="dob" class="form-label"><b>Date of Birth</b></label>
