--- a/templates/admin_users.html
+++ b/templates/admin_users.html
@@ -30,7 +30,7 @@
                             <a class="nav-link text-danger" href="/login">Logout</a>
                         </li>
                     </ul>
-                    <form class="d-flex" method="POST" action="/search1/{{name}}">
+                    <form class="d-flex" method="POST" action="/search3/{{name}}">
                         <input class="form-control me-2" type="search" placeholder="Search" name="search_txt" id="search_txt">
                         <button class="btn btn-outline-primary" type="submit">Search</button>
                     </form>
@@ -49,7 +49,6 @@
                     <tr>
                         <th>ID</th>
                         <th>Email</th>
-                        <th>Password</th>
                         <th>Fullname</th>
                         <th>qualification</th>
                         <th>Dob</th>
@@ -61,12 +60,11 @@
                             <tr>
                                 <td>{{ user.id }}</td>
                                 <td>{{ user.email}}</td>
-                                <td>{{ user.password }}</td>
                                 <td>{{ user.fullname }}</td>
                                 <td>{{ user.qualification }}</td>
                                 <td>{{ user.DOB }}</td>
                                 <td>
-                                    <a href="/edit_user/{{user.id}}/{{name}}" class="btn btn-sm btn-primary">View</a>
+                                    <a href="/view_user/{{user.id}}/{{name}}" class="btn btn-sm btn-primary">View</a>
                                 </td>
                             </tr>
                     {% endfor %}
