--- a/templates/signup.html
+++ b/templates/signup.html
@@ -9,24 +9,24 @@
 </head>
 <body>
     <!-- container starts here -->
-    <div id="signup-container">
+    <div id="container">
         <h2 class="text-center text-primary">Quiz Master</h2>
         <!-- panel starts here -->
         <div id="signup-panel">
             <h3 class="text-center">Register Here</h3>
-
+            <!-- input - form starts heere -->
             <form action="/signup" method="POST">
                 <div class="mb-3">
                     <label for="email" class="form-label"><b>Email Address</b></label>
-                    <input type="email" class="form-control" id="email" name="email" placeholder="iitm@ds.study.iitm.ac.in" required>
+                    <input type="email" class="form-control" id="email" name="email" placeholder="iitm@ds.study.iitm.ac.in">
                 </div>
                 <div class="mb-3">
                     <label for="pwd" class="form-label"><b>Password</b></label>
-                    <input type="password" class="form-control" id="pwd" name="pwd" placeholder="Set a strong password" required>
+                    <input type="password" class="form-control" id="pwd" name="pwd" placeholder="Set a strong password">
                 </div>
                 <div class="mb-3">
                     <label for="fullname" class="form-label"><b>Full Name</b></label>
-                    <input type="text" class="form-control" id="fullname" name="fullname" required>
+                    <input type="text" class="form-control" id="fullname" name="fullname">
                 </div>
                 <div class="mb-3">
                     <label for="quali" class="form-label"><b>Qualification</b></label>
@@ -45,8 +45,8 @@
                 <div class="text-center" style="color: red;">
                     {{ msg }}
                 </div>
-                
             </form>
+            <!-- input form ends here -->
         </div>
         <!-- panel starts here -->
     </div>
