--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,27 +2,23 @@
     margin: 0px
 }
 
-/* ############################################################                login page                            ######################################## */
 
-#login-container{
-    height: 515px;
-    width: 390px;
+#container{
+    border: 2px solid black;
     margin: auto;
-    margin-top: 20px;
-    
+    min-height: 729px;
+    width: 100%;
     
 }
 
 #login-panel{
-    margin-left: 8px;
-    margin-right: 8px;
     border-radius: 10px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.215);
     height: 465px;
+    width: 390px;
+    margin: auto;
     padding: 20px;
-    border: 1px solid rgba(0, 0, 0, 0.26);
-
-
+    border: 1px solid rgba(0, 0, 0, 0.26)
 }
 
 #link {
@@ -31,40 +27,16 @@
     margin-top: 10px;
 }
 
-/* ############################################################                signup page                            ######################################## */
-
-#signup-container{
-    margin: auto;
-    width: 430px;
-    height: 600px;
-    margin-top: 20px;
-    
-    
-    
-    
-}
-
 #signup-panel{
-    margin-left: 8px;
-    margin-right: 8px;
     border-radius: 10px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.215);
     height: 610px;
+    width: 430px;
+    margin: auto;
     padding: 20px;
     border: 1px solid rgba(0, 0, 0, 0.26);
-
 }
 
-/* ############################################################                admin dashboard                           ######################################## */
-
-
-
-#container{
-    border: 2px solid black;
-    margin: auto;
-    min-height: 700px;
-    width: 95%;
-}
 
 #heading{
     text-align: center;
@@ -75,23 +47,37 @@
 
 
 .navbar {
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-    padding: 10px 20px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.374);
+    padding:20px;
 }
 
 .card {
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.280);
     transition: transform 0.2s ease-in-out;
     border-radius: 10px;
-}
-.card:hover {
-    transform: scale(1.02);
+    padding: 20px;
+    
 }
 
-.table {
-    margin-top: 10px;
+
+.card:hover {
+    transform: scale(1.01);
 }
-.table-dark th {
+
+
+#index-body{
+    background: linear-gradient(to right, #332fab, #a8e063);
+    height: 729px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
     text-align: center;
 }
 
+#welcome-container {
+    background: rgba(255, 2-w55, 255, 0.2);
+    padding: 30px;
+    border-radius: 15px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+}
