--- a/templates/add_chapter.html
+++ b/templates/add_chapter.html
@@ -5,23 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="/static/css/style.css">
-    <title>user dashboard</title>
-    <style>
-        .card {
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-        }
-    </style>
+    <title>Add Chapter</title>
+    
 </head>
 <body>
+    <!-- container starts here -->
     <div id="container">
         <h1 id="heading">Quiz Master</h1>
         <!-- nav bar started here -->
-        <nav class="navbar navbar-expand-lg navbar-light bg-white" style="box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-            padding: 10px 20px;">
+        <nav class="navbar navbar-expand-lg navbar-light bg-white">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Admin Dashboard</a>
+                <a class="navbar-brand">Admin Dashboard</a>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav me-auto">
                         <li class="nav-item">
@@ -37,7 +31,7 @@
                             <a class="nav-link text-danger" href="/login">Logout</a>
                         </li>
                     </ul>
-                    <form class="d-flex" method="POST" action="/search/{{name}}">
+                    <form class="d-flex" method="POST" action="#">
                         <input class="form-control me-2" type="search" placeholder="Search" name="search_txt" id="search_txt">
                         <button class="btn btn-outline-primary" type="submit">Search</button>
                     </form>
@@ -50,7 +44,7 @@
         <div id="add_chapter-panel" style="margin: auto;margin-top: 50px; width: 500px;">
             <!-- card starts here -->
             <div class="card">
-                <h3 class="text-center text-primary">add chapter</h3>
+                <h3 class="text-center text-primary">Add chapter</h3>
                 <form action="/add_chapter/{{subject.id}}/{{name}}" method="POST">
                     <div class="mb-3">
                         <label for="s_id" class="form-label">Subject ID</label>
@@ -58,7 +52,7 @@
                     </div>
                     <div class="mb-3">
                         <label for="name" class="form-label">Chapter Name</label>
-                        <input type="text" class="form-control" id="name" name="name" required>
+                        <input type="text" class="form-control" id="name" name="name" >
                     </div>
                     <div class="mb-3">
                         <label for="description" class="form-label">Description</label>
@@ -68,15 +62,15 @@
                         <button type="submit" class="btn btn-primary">Submit</button>
                         <a href="/admin/{{name}}" class="btn btn-secondary">Cancel</a>
                     </div>
-                    {% if msg %}
-                    <p class="error-msg text-center">{{ msg }}</p>
-                    {% endif %}
+                    <div class=" text-center" style="color:  red;">
+                        {{ msg }}
+                    </div>
                 </form>
             </div>
             <!-- card ends here -->
         </div>
-         <!-- panel ends here -->
-
+     <!-- add_chapter panel  ends here -->
     </div>
+    <!-- container ends here -->
 </body>
 </html>
