--- a/templates/add_quiz.html
+++ b/templates/add_quiz.html
@@ -5,23 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="/static/css/style.css">
-    <title>user dashboard</title>
-    <style>
-        .card {
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-        }
-    </style>
+    <title>Add Quiz</title>
 </head>
 <body>
+    <!-- container starts here -->
     <div id="container">
         <h1 id="heading">Quiz Master</h1>
         <!-- nav bar started here -->
-        <nav class="navbar navbar-expand-lg navbar-light bg-white" style="box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-            padding: 10px 20px;">
+        <nav class="navbar navbar-expand-lg navbar-light bg-white">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Admin Dashboard</a>
+                <a class="navbar-brand">Admin Dashboard</a>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav me-auto">
                         <li class="nav-item">
@@ -37,7 +30,7 @@
                             <a class="nav-link text-danger" href="/login">Logout</a>
                         </li>
                     </ul>
-                    <form class="d-flex" method="POST" action="/search/{{name}}">
+                    <form class="d-flex" method="POST" action="#">
                         <input class="form-control me-2" type="search" placeholder="Search" name="search_txt" id="search_txt">
                         <button class="btn btn-outline-primary" type="submit">Search</button>
                     </form>
@@ -52,37 +45,40 @@
         <!-- card starts here -->
             <div class="card">
             <h4 class="text-center text-primary">Add Quiz</h4>
-        <form action="/add_quiz/{{chapter.id}}/{{name}}" method="POST">
-            <div class="mb-2">
-                <label for="s_id" class="form-label">Chapter ID</label>
-                <input type="number" class="form-control form-control-sm" id="s_id" name="s_id" value="{{chapter.id}}" readonly>
-            </div>
-            <div class="mb-2">
-                <label for="quiz_name" class="form-label">Name</label>
-                <input type="text" class="form-control form-control-sm" id="quiz_name" name="quiz_name" value="{{chapter.name}}">
-            </div>
-            <div class="mb-2">
-                <label for="date_of_quiz" class="form-label">Date of Quiz</label>
-                <input type="date" class="form-control form-control-sm" id="date_of_quiz" name="date_of_quiz" required>
-            </div>
-            <div class="mb-2">
-                <label for="time_duration" class="form-label">Time Duration</label>
-                <input type="time" class="form-control form-control-sm" id="time_duration" name="time_duration" required>
-            </div>
-            <div class="mb-2">
-                <label for="remarks" class="form-label">Remarks</label>
-                <input type="text" class="form-control form-control-sm" id="remarks" name="remarks">
-            </div>
-            <div class="text-center">
-                <button type="submit" class="btn btn-primary btn-sm">Submit</button>
-                <a href="/admin/{{name}}" class="btn btn-danger btn-sm">Cancel</a>
-            </div>
-            {{msg}}
-        </form>
-    </div>
+            <form action="/add_quiz/{{chapter.id}}/{{name}}" method="POST">
+                <div class="mb-2">
+                    <label for="s_id" class="form-label">Chapter ID</label>
+                    <input type="number" class="form-control form-control-sm" id="s_id" name="s_id" value="{{chapter.id}}" readonly>
+                </div>
+                <div class="mb-2">
+                    <label for="quiz_name" class="form-label">Name</label>
+                    <input type="text" class="form-control form-control-sm" id="quiz_name" name="quiz_name" value="{{chapter.name}}">
+                </div>
+                <div class="mb-2">
+                    <label for="date_of_quiz" class="form-label">Date of Quiz</label>
+                    <input type="date" class="form-control form-control-sm" id="date_of_quiz" name="date_of_quiz" >
+                </div>
+                <div class="mb-2">
+                    <label for="time_duration" class="form-label">Time Duration</label>
+                    <input type="time" class="form-control form-control-sm" id="time_duration" name="time_duration">
+                </div>
+                <div class="mb-2">
+                    <label for="remarks" class="form-label">Remarks</label>
+                    <input type="text" class="form-control form-control-sm" id="remarks" name="remarks">
+                </div>
+                <div class="text-center">
+                    <button type="submit" class="btn btn-primary btn-sm">Submit</button>
+                    <a href="/admin/{{name}}" class="btn btn-danger btn-sm">Cancel</a>
+                </div>
+                <div class=" text-center" style="color:  red;">
+                    {{ msg }}
+                </div>
+            </form>
+        </div>
      <!-- card ends here -->
         </div>
         <!-- add_quiz panel ends here -->
     </div>
+    <!-- container ends here -->
 </body>
 </html>
