--- a/templates/admin_summary.html
+++ b/templates/admin_summary.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="/static/css/style.css">
-    <title>Admin Dashboard</title>
-
+    <title>Admin Summmary</title>
 </head>
 <body>
     <div id="container">
@@ -30,10 +29,6 @@
                             <a class="nav-link text-danger" href="/login">Logout</a>
                         </li>
                     </ul>
-                    <form class="d-flex" method="POST" action="/search1/{{name}}">
-                        <input class="form-control me-2" type="search" placeholder="Search" name="search_txt" id="search_txt">
-                        <button class="btn btn-outline-primary" type="submit">Search</button>
-                    </form>
                 </div>
                 <span class="ms-3">Welcome, <strong>{{name}}</strong></span>
             </div>
@@ -41,7 +36,7 @@
         <!-- nav bar ends here -->
 
         <!-- Admin summary panel -->
-        <div id="admin-summary-panel" class="container mt-4">
+        <div id="admin-summary-panel" class="container mt-4" >
             <h4 class="text-center text-primary">Admin Summary</h4>
             <p><strong>Total Users:</strong> {{ total_users }}</p>
             <p><strong>Total no of Quiz Attempted:</strong> {{ attempted_users }}</p>
