--- a/templates/edit_subject.html
+++ b/templates/edit_subject.html
@@ -5,21 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="/static/css/style.css">
-    <title>edit subject</title>
-    <style>
-        .card {
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-        }
-    </style>
+    <title>Edit subject</title>
 </head>
 <body>
+    <!-- container starts here -->
     <div id="container">
         <h1 id="heading">Quiz Master</h1>
         <!-- nav bar started here -->
-        <nav class="navbar navbar-expand-lg navbar-light bg-white" style="box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-            padding: 10px 20px;">
+        <nav class="navbar navbar-expand-lg navbar-light bg-white" >
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">Admin Dashboard</a>
                 <div class="collapse navbar-collapse" id="navbarNav">
@@ -37,7 +30,7 @@
                             <a class="nav-link text-danger" href="/login">Logout</a>
                         </li>
                     </ul>
-                    <form class="d-flex" method="POST" action="/search/{{name}}">
+                    <form class="d-flex" method="POST" action="#">
                         <input class="form-control me-2" type="search" placeholder="Search" name="search_txt" id="search_txt">
                         <button class="btn btn-outline-primary" type="submit">Search</button>
                     </form>
@@ -55,20 +48,25 @@
                 <h3 class="text-center text-primary">Edit Subject</h3>
                 <form action="/edit_subject/{{subject.id}}/{{name}}" method="POST">
                 <div class="mb-3">
+                    <label for="name" class="form-label">Subject ID</label>
+                    <input type="text" class="form-control" id="name" name="name" value="{{subject.id}}">
+                </div>
+                <div class="mb-3">
                     <label for="name" class="form-label">Subject Name</label>
-                    <input type="text" class="form-control" id="name" name="name" value="{{subject.name}}" required>
+                    <input type="text" class="form-control" id="name" name="name" value="{{subject.name}}">
                 </div>
                 <div class="mb-3">
                     <label for="description" class="form-label">Description</label>
                     <textarea class="form-control" id="description" name="description" rows="3" >{{subject.description}}</textarea>
                 </div>
-
                 <div class="mb-3 text-center">
                     <button type="submit" class="btn btn-primary mx-2">Save</button>
                     <a href="/delete_subject/{{subject.id}}/{{name}}" class="btn btn-danger mx-2">Delete</a>
                     <a href="/admin/{{name}}" class="btn btn-secondary mx-2">Cancel</a>
                 </div>
-
+                <div class=" text-center" style="color:  red;">
+                    {{ msg }}
+                </div>
             </form>
             </div>
             <!-- card starts here -->
@@ -76,5 +74,6 @@
         <!-- edit_subject panel ends here -->
         {% endif %}
     </div>
+    <!-- container ends here -->
 </body>
 </html>
