--- a/templates/edit_users.html
+++ b/templates/edit_users.html
@@ -5,21 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="/static/css/style.css">
-    <title>user dashboard</title>
-    <style>
-        .card {
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-        }
-    </style>
+    <title>Edit Users</title>
+    
 </head>
 <body>
     <div id="container">
         <h1 id="heading">Quiz Master</h1>
         <!-- nav bar started here -->
-        <nav class="navbar navbar-expand-lg navbar-light bg-white" style="box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-            padding: 10px 20px;">
+        <nav class="navbar navbar-expand-lg navbar-light bg-white">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">Admin Dashboard</a>
                 <div class="collapse navbar-collapse" id="navbarNav">
@@ -37,7 +30,7 @@
                             <a class="nav-link text-danger" href="/login">Logout</a>
                         </li>
                     </ul>
-                    <form class="d-flex" method="POST" action="/search/{{name}}">
+                    <form class="d-flex" method="POST" action="#">
                         <input class="form-control me-2" type="search" placeholder="Search" name="search_txt" id="search_txt">
                         <button class="btn btn-outline-primary" type="submit">Search</button>
                     </form>
@@ -55,8 +48,12 @@
             <div class="card">
                 <form action="/view_user/{{user.id}}/{{name}}" method="POST">
                     <div class="mb-3">
+                        <label for="email" class="form-label"><b>Total no. of Quiz attempted</b></label>
+                        <input type="email" class="form-control" id="email" name="email"  value="{{user.scores | length}}" readonly>
+                    </div>
+                    <div class="mb-3">
                         <label for="email" class="form-label"><b>Email Address</b></label>
-                        <input type="email" class="form-control" id="email" name="email" placeholder="iitm@ds.study.iitm.ac.in" value="{{user.email}}" readonly>
+                        <input type="email" class="form-control" id="email" name="email"  value="{{user.email}}" readonly>
                     </div>
                     <div class="mb-3">
                         <label for="fullname" class="form-label"><b>Full Name</b></label>
