--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <title>Quiz Questions</title>
+    <title>Quiz</title>
     <style>
         body {
             background-color: #f8f9fa;
@@ -31,20 +31,20 @@
 </head>
 <body>
 
-    <div class="container mt-5">
-        <div class="quiz-container">
-            <h2 class="text-primary text-center">Quiz Master</h2>
-            <h5 class="text-center text-secondary">{{ quiz.title }}</h5>
-            <hr>
-
-            <span><strong>Total Questions: {{ total }}</strong></span>
-
-            <form method="POST">
+    <div id="container" >
+        <h2 class="text-primary text-center">Quiz Master</h2>
+        <div class="quiz-container" style="background-color: beige;">
+            
+            <h5 class="text-center text-secondary">{{ quiz.name }}</h5>
+            <div style="display: flex; justify-content: space-between;">
+                <strong>Total Questions: {{ total }}</strong>
+                <strong style="color: red;">Total Time Given: {{ ti_me }} Minutes</strong>
+            </div>
+            <form action="/quiz_exam/{{quiz.id}}/{{name}}"  method="POST" style="margin-top: 10px;">
                 {% for question in questions %}
                     <div class="question-box mb-3">
                         <h5>{{ loop.index }}. {{ question.question_statement }}</h5>
                     </div>
-
                     <div class="mb-3">
                         <div class="form-check">
                             <input class="form-check-input" type="radio" name="{{ question.id }}" value="1" id="option1-{{ question.id }}">
@@ -65,7 +65,6 @@
                     </div>
                     <hr>
                 {% endfor %}
-
                 <div class="text-center mt-4">
                     <button type="submit" class="btn btn-primary">Submit Quiz</button>
                 </div>
