--- a/templates/quiz_dashboard.html
+++ b/templates/quiz_dashboard.html
@@ -5,17 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="/static/css/style.css">
-    <title>user dashboard</title>
-
+    <title>Quiz dashboard</title>
 </head>
 <body>
+    <!-- container starts here -->
     <div id="container">
         <h1 id="heading">Quiz Master</h1>
         <!-- nav bar started here -->
-        <nav class="navbar navbar-expand-lg navbar-light bg-white" style="box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-            padding: 10px 20px;">
+        <nav class="navbar navbar-expand-lg navbar-light bg-white" >
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Admin Dashboard</a>
+                <a class="navbar-brand" >Admin Dashboard</a>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav me-auto">
                         <li class="nav-item">
@@ -40,13 +39,14 @@
             </div>
         </nav>
         <!-- nav bar ended here -->
-         <!-- container starts here -->
+         <!-- gid system starts here -->
         <div class="container" style="margin-top: 20px;">
             {% if quizs %}
         <div class="row">
             {% for quiz in quizs %}
-            <!-- car starts here -->
+            <!-- card area starts here -->
             <div class="col-lg-6 col-md-6 col-sm-12 mb-4">
+                <!-- card ends here -->
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title text-center">
@@ -75,9 +75,8 @@
                             </tbody>
                         </table>
                         {% else %}
-                        <p class="text-center text-danger">No questions available.</p>
+                        <p class="text-center text-danger">No questions available</p>
                         {% endif %}
-
                         <!-- Buttons for Quiz Management -->
                         <div style="display: flex;justify-content: center;">
                             <a href="/add_question/{{quiz.id}}/{{name}}" class="btn btn-success btn-sm" style="margin-right: 7px;">Add Question</a>
@@ -85,15 +84,17 @@
                         </div>
                     </div>
                 </div>
+                <!-- card ends here -->
             </div>
-               <!-- car ends here -->
+               <!-- card area starts here -->
             {% endfor %}
         </div>
         {% else %}
         <p class="text-center">No quizzes are available!</p>
         {% endif %}
         </div>
-         <!-- container ends here -->
+         <!-- gid system starts here -->
     </div>
+    <!-- container ends here -->
 </body>
 </html>
