--- a/templates/user_dashboard.html
+++ b/templates/user_dashboard.html
@@ -11,8 +11,7 @@
     <div id="container">
         <h1 id="heading">Quiz Master</h1>
         <!-- nav bar started here -->
-        <nav class="navbar navbar-expand-lg navbar-light bg-white" style="box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-            padding: 10px 20px;">
+        <nav class="navbar navbar-expand-lg navbar-light bg-white">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">User Dashboard</a>
                 <div class="collapse navbar-collapse" id="navbarNav">
@@ -27,7 +26,7 @@
                             <a class="nav-link text-danger" href="/login">Logout</a>
                         </li>
                     </ul>
-                    <form class="d-flex" method="POST" action="/search/{{name}}">
+                    <form class="d-flex" method="POST" action="/search4/{{name}}">
                         <input class="form-control me-2" type="search" placeholder="Search" name="search_txt" id="search_txt">
                         <button class="btn btn-outline-primary" type="submit">Search</button>
                     </form>
@@ -37,26 +36,28 @@
         </nav>
 
         <!-- nav bar ended here -->
-         <!-- user panel starts here -->
-        <div id="user-panel" style="margin: auto; margin-top: 30px;width: 1000px;height: auto;">
+         <!-- upcoming quiz panel starts here -->
+        <div id="upcoming-user-panel" style="margin: auto; margin-top: 30px;width: 1000px;height: auto; border: 1px solid  black;">
             <h2 class="text-center text-primary mt-4">Upcoming Quizzes</h2>
-            {% if quizs %}
+            {% if uquizs %}
             <!-- table starts here -->
             <table class="table table-striped table-hover table-bordered">
                 <thead class="table-dark text-center">
                     <tr>
                         <th>ID</th>
+                        <th>Name</th>
                         <th>No. of Questions</th>
-                        <th>Date</th>
+                        <th>Last date</th>
                         <th>Duration</th>
                         <th>Actions</th>
                     </tr>
                 </thead>
                 <tbody class="text-center">
-                    {% for quiz in quizs %}
+                    {% for quiz in uquizs %}
                         {% if quiz.questions | length > 0 %}
                             <tr>
                                 <td>{{ quiz.id }}</td>
+                                <td>{{ quiz.name }}</td>
                                 <td>{{ quiz.questions | length }}</td>
                                 <td>{{ quiz.date_of_quiz }}</td>
                                 <td>{{ quiz.time_duration }}</td>
@@ -74,7 +75,50 @@
             <div class="text-center text-muted mt-4">No Quizzes Available</div>
         {% endif %}
         </div>
-          <!-- user panel ends here -->
+         <!-- upcoming quiz panel ends here -->
+
+
+         <!-- expired quiz panel starts here -->
+        <div id="expired-user-panel" style="margin: auto; margin-top: 30px;width: 1000px;height: auto; border: 1px solid  black;margin-bottom: 50px;">
+            <h2 class="text-center text-primary mt-4">Expired Quizzes</h2>
+            <div class="text-center text-danger" style="margin-bottom: 10px;"> <strong>These Quizes will Not effect the Summary( you can still attend then just for Practice)</strong></div>
+            {% if equizs %}
+            <!-- table starts here -->
+            <table class="table table-striped table-hover table-bordered">
+                <thead class="table-dark text-center">
+                    <tr>
+                        <th>ID</th>
+                        <th>Name</th>
+                        <th>No. of Questions</th>
+                        <th>Last date</th>
+                        <th>Duration</th>
+                        <th>Actions</th>
+                    </tr>
+                </thead>
+                <tbody class="text-center">
+                    {% for quiz in equizs %}
+                        {% if quiz.questions | length > 0 %}
+                            <tr>
+                                <td>{{ quiz.id }}</td>
+                                <td>{{ quiz.name }}</td>
+                                <td>{{ quiz.questions | length }}</td>
+                                <td>{{ quiz.date_of_quiz }}</td>
+                                <td>{{ quiz.time_duration }}</td>
+                                <td>
+                                    <a href="/view_quiz/{{ quiz.id }}/{{ name }}" class="btn btn-sm btn-warning">View</a>
+                                    <a href="/quiz_exam/{{ quiz.id }}/{{ name }}" class="btn btn-sm btn-success">Start</a>
+                                </td>
+                            </tr>
+                        {% endif %}
+                    {% endfor %}
+                </tbody>
+            </table>
+            <!-- table ends here -->
+        {% else %}
+            <div class="text-center text-muted mt-4">No Quizzes Available</div>
+        {% endif %}
+        </div>
+          <!-- expired quiz panel ends here -->
     </div>
 </body>
 </html>
