--- a/templates/user_scores.html
+++ b/templates/user_scores.html
@@ -11,8 +11,7 @@
     <div id="container">
         <h1 id="heading">Quiz Master</h1>
         <!-- nav bar started here -->
-        <nav class="navbar navbar-expand-lg navbar-light bg-white" style="box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-            padding: 10px 20px;">
+        <nav class="navbar navbar-expand-lg navbar-light bg-white">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">User Dashboard</a>
                 <div class="collapse navbar-collapse" id="navbarNav">
@@ -27,10 +26,6 @@
                             <a class="nav-link text-danger" href="/login">Logout</a>
                         </li>
                     </ul>
-                    <form class="d-flex" method="POST" action="/search/{{name}}">
-                        <input class="form-control me-2" type="search" placeholder="Search" name="search_txt" id="search_txt">
-                        <button class="btn btn-outline-primary" type="submit">Search</button>
-                    </form>
                 </div>
                 <span class="ms-3">Welcome, <strong>{{name}}</strong></span>
             </div>
@@ -41,12 +36,13 @@
         <div id="user_score-panel" style="margin: auto; margin-top: 30px;width: 1000px;height: auto;">
             <h4 class="text-center text-primary">User Score</h4>
             {% if scores %}
-            <div class="table-responsive">
+            <div class="table-responsive" style="margin-bottom: 20px;">
                 <table class="table table-bordered table-striped text-center">
                     <thead class="table-dark">
                         <tr>
                             <th>Quiz ID</th>
-                            <th>Questions</th>
+                            <th>Quiz Name</th>
+                            <th>No. of Questions</th>
                             <th>Date Attempted</th>
                             <th>Score</th>
                         </tr>
@@ -55,8 +51,9 @@
                         {% for score in scores %}
                         <tr>
                             <td>{{ score.quiz_id }}</td>
+                            <td>{{ quiz_names[score.quiz_id]}}</td>
                             <td>{{ num_questions[score.quiz_id] }}</td>
-                            <td>{{ score.time_stamp.split(' ')[0] }}</td>
+                            <td>{{ score.time_stamp }}</td>
                             <td class="text-success fw-bold">{{ score.total_scored }}</td>
                         </tr>
                         {% endfor %}
