--- a/templates/view_quiz.html
+++ b/templates/view_quiz.html
@@ -6,20 +6,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="/static/css/style.css">
     <title>user dashboard</title>
-    <style>
-        .card {
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-        }
-    </style>
 </head>
 <body>
+    <!-- container starts here -->
     <div id="container">
         <h1 id="heading">Quiz Master</h1>
         <!-- nav bar started here -->
-        <nav class="navbar navbar-expand-lg navbar-light bg-white" style="box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-            padding: 10px 20px;">
+        <nav class="navbar navbar-expand-lg navbar-light bg-white">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">User Dashboard</a>
                 <div class="collapse navbar-collapse" id="navbarNav">
@@ -83,5 +76,6 @@
         </div>
         <!-- quiz_ detail panel ends here -->
     </div>
+    <!-- container ends here -->
 </body>
 </html>
