--- a/templates/admin_summary.html
+++ b/templates/admin_summary.html
@@ -40,7 +40,7 @@
             <h4 class="text-center text-primary">Admin Summary</h4>
             <p><strong>Total Users:</strong> {{ total_users }}</p>
             <p><strong>Total no of Quiz Attempted:</strong> {{ attempted_users }}</p>
-            <p><strong> Total Users Who Scored 100%:</strong> {{ full_score_users }} ({{ full_score_percent }}%)</p>
+            <p><strong> Total attepts in which Scored 100%:</strong> {{ full_score_users }} ({{ full_score_percent }}%)</p>
 
             {% if chart_path %}
             <div class="text-center">
