--- a/templates/edit_subject.html
+++ b/templates/edit_subject.html
@@ -48,8 +48,8 @@
                 <h3 class="text-center text-primary">Edit Subject</h3>
                 <form action="/edit_subject/{{subject.id}}/{{name}}" method="POST">
                 <div class="mb-3">
-                    <label for="name" class="form-label">Subject ID</label>
-                    <input type="text" class="form-control" id="name" name="name" value="{{subject.id}}">
+                    <label for="id" class="form-label">Subject ID</label>
+                    <input type="text" class="form-control" id="id" name="id" value="{{subject.id}}">
                 </div>
                 <div class="mb-3">
                     <label for="name" class="form-label">Subject Name</label>
