--- a/templates/quiz_dashboard.html
+++ b/templates/quiz_dashboard.html
@@ -50,7 +50,7 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title text-center">
-                            Quiz {{ quiz.id }} | <small class="text-primary">{{ quiz.name }}</small>
+                            Quiz {{ quiz.id }} | <small class="text-primary">{{ quiz.name }} | {{quiz.Chapter_id}}</small>
                         </h5>
                         {% if quiz.questions %}
                         <table class="table">
