--- a/static/css/style.css
+++ b/static/css/style.css
@@ -66,7 +66,7 @@
 
 
 #index-body{
-    background: linear-gradient(to right, #332fab, #a8e063);
+    background: linear-gradient(to top, #332fab, #a8e063);
     height: 729px;
     display: flex;
     justify-content: center;
